force-app/main/default/objects/Lead/fields/IndustryCategory__c.field-meta.xml
<CustomField>
    <fullName>IndustryCategory__c</fullName>
    <label>Industry Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IndustryCategory</valueSetName>
    </valueSet>
</CustomField>