force-app/main/default/objects/Lead/fields/IndustrySector__c.field-meta.xml
<CustomField>
    <fullName>IndustrySector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IndustryCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>IndustrySector</valueSetName>
    </valueSet>
</CustomField>