force-app/main/default/objects/Lead/fields/NoOfEmployeesRange__c.field-meta.xml
<CustomField>
    <fullName>NoOfEmployeesRange__c</fullName>
    <label>No. Of Employees Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NoOfEmployeesRange</valueSetName>
    </valueSet>
</CustomField>