force-app/main/default/objects/Lead/fields/PersonLinkedin__c.field-meta.xml
<CustomField>
    <fullName>PersonLinkedin__c</fullName>
    <label>Person Linkedin</label>
    <type>Url</type>
</CustomField>