force-app/main/default/objects/Lead/fields/RevenueRange__c.field-meta.xml
<CustomField>
    <fullName>RevenueRange__c</fullName>
    <label>Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RevenueRange</valueSetName>
    </valueSet>
</CustomField>