force-app/main/default/objects/Lead/fields/SystemTags__c.field-meta.xml
<CustomField>
    <fullName>SystemTags__c</fullName>
    <label>System Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SystemTags</valueSetName>
    </valueSet>
</CustomField>