force-app/main/default/objects/Lead/listViews/P2P_Installation_Leads.listView-meta.xml
<ListView>
    <fullName>P2P_Installation_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>contains</operation>
        <value>SFDC-IN|Profile To Persona | Migrate User Profiles to Permission Set Driven Personas,SFDC-DM|Profile To Persona | Migrate User Profiles to Permission Set Driven Personas</value>
    </filters>
    <label>P2P Installation Leads</label>
</ListView>